@@ -23,7 +23,7 @@ class Close(Action):
 
 
     def _on_data_received(self, data, *args):
-        self.emit('data_received', data)
+        self.signal_emit('data_received', data)
 
 
     def execute(self, global_lock, global_data, local_data):
